test_src/compiler_errors/types/arithmetic/ModBoolError2.b
class ModBoolError2 {
    void test() {
        println(2 % true);
    }
}
